Fix(storage): 明确接口装配非空边界